[tool.poetry]
name = "penguin"
version = "0.1.0"
description = ""
authors = ["Keito Fukuoka <keito.0o0.kirby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
mypy = "^1.14.1"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79
indent-width = 4
